# piano-analytics-component

./: .gitignore  Cargo.toml  Makefile  README.md  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: lib.rs  piano_payload.rs
