[package]
name = "piano-analytics-component"
version = "0.6.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
chrono-tz = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_qs = "0.13.0"
url = "2.5.3"
wit-bindgen = "0.34.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }