[package]
name = "piano-analytics-component"
version = "1.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
chrono-tz = "0.10.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
wit-bindgen = "0.43.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.17"
pretty_assertions = "1.4.1"
uuid = { version = "1.17.0", features = ["v4"] }
